[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/menu/LevelPreview.gd" type="Script" id=1]
[ext_resource path="res://assets/preview/bonus.png" type="Texture" id=3]
[ext_resource path="res://assets/preview/play.png" type="Texture" id=4]

[node name="LevelPreview" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviewTexture" type="TextureRect" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 590.0
margin_bottom = 1190.0
texture = ExtResource( 4 )
stretch_mode = 1

[node name="PreviewArea" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 590.0
margin_bottom = 1190.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="HBoxContainer" parent="PreviewArea"]
margin_top = 1150.0
margin_right = 580.0
margin_bottom = 1180.0

[node name="LevelLabel" type="Label" parent="PreviewArea/Bottom"]
margin_right = 546.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0"

[node name="BonusTexture" type="TextureRect" parent="PreviewArea/Bottom"]
margin_left = 550.0
margin_right = 580.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
